:bug: Fix statusbar being invisible

--- a/resources/gui/css/statusbar.css
+++ b/resources/gui/css/statusbar.css
@@ -12,7 +12,7 @@
     transition: opacity 0.2s linear;
 }
 
-#statusbar.visible {
+.loaded #statusbar {
     opacity: 1;
 }
 
